# IKEA-Global-Pricing-Analytics

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
data/: clustering_artifact.joblib  clustering_evaluation.json  clustering_metadata.json  clustering_results.csv  country_metrics.csv  gdp_per_capita.csv  pipeline_manifest.json  product_benchmark.csv
notebooks/: 01_data_preparation.py  02_country_aggregation.py  05_market_clustering.py  06_pdf_report.py  07_cluster_validation.py  generate_readme_images.py  run_pipeline.py
src/: aggregation.py  clustering.py  data_prep.py  pipeline.py
tests/: test_api.py  test_clustering.py  test_data_validation.py  test_pipeline.py  test_pipeline_manifest.py
